wordpresseks/wp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress
        name: wordpress-web
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
  namespace: helloworld
spec:
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30033
  selector:
    app: wordpress
    tier: frontend
  type: NodePort

  ---

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: wp-pvc
namespace: helloworld
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
  storageClassName: gp2
