wordpresseks/wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: helloworld
  
spec:
  ingressClassName: nginx
  rules:
    - host: honeybunny.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
